--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="/cart">
-      Cart
+      Cart({{cartAmount()}})
     </a>
   </li>
 </ul>
