--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -28,7 +28,7 @@ img {
 
 .cart-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   margin-top: 64px;
 }
@@ -42,4 +42,10 @@ img {
   display: flex;
   justify-content: center;
   margin-top: 64px;
+  flex-direction: column;
+  align-items: center;
+}
+
+label, form.checkout button{
+  margin: 10px;
 }
