start adding changes suggested in review

--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -13,6 +13,12 @@ img {
   margin-bottom: 20px;
 }
 
+.cart-item button{
+  padding: 0;
+  border: none;
+  border-radius: 10px;
+}
+
 .cart-item-details {
   display: flex;
   justify-content: center;
