--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 <div class="product-container">
-  <a (click)="navigateToDetail()">
+  <a (click)="toDetail()">
     <img class="product-image" src={{product.url}} alt={{product.name}}/>
   </a>
   {{product.name}}
