--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center">Products</h1>
 <div class="container">
   <div class="row">
-    <app-product-item class="col-lg-4" *ngFor="let product of products" [product]="product"></app-product-item>
+    <app-product-item class="col-lg-4" *ngFor="let product of products" [product]="product" (goToProductDetail)="goToProductDetail($event)"></app-product-item>
   </div>
 </div>
